--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.2",
-    "formidable": "^1.1.1",
     "http-status-codes": "^1.1.6",
     "jade": "~1.11.0",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.2"
   },
