--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
+    "check-preconditions": "^0.2.3",
     "config": "^1.26.1",
     "connect-busboy": "0.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.2",
+    "express-validator": "^3.2.0",
     "http-status-codes": "^1.1.6",
     "jade": "~1.11.0",
     "mongodb": "^2.2.26",
@@ -25,8 +27,8 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "mocha": "^3.4.1",
     "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "mocha": "^3.4.1"
+    "chai-http": "^3.0.0"
   }
 }
