--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "nodemailer": "^4.0.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.1",
     "serve-favicon": "~2.4.2"
