--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
     "express": "~4.15.2",
     "express-session": "^1.15.2",
     "express-validator": "^3.2.0",
+    "fs": "0.0.1-security",
     "http-status-codes": "^1.1.6",
+    "jade": "^1.11.0",
     "jstransformer": "^1.0.0",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.8",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "nodemailer": "^4.0.1",
-    "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.1",
-    "serve-favicon": "~2.4.2"
+    "readline": "^1.3.0",
+    "serve-favicon": "~2.4.2",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "mocha": "^3.4.1",
