--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "mocha --timeout 10000"
   },
   "dependencies": {
+    "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
+    "bootstrap-social": "^5.1.1",
     "check-preconditions": "^0.2.3",
     "config": "^1.26.1",
     "connect-busboy": "0.0.2",
