--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "stream": "0.0.2"
   },
   "devDependencies": {
-    "mocha": "^3.4.1",
     "chai": "^3.5.0",
-    "chai-http": "^3.0.0"
+    "chai-http": "^3.0.0",
+    "mocha": "^3.4.1",
+    "nyc": "^13.0.1"
   }
 }
