Validation of email working and there are 1 test to check it

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "mocha": "^3.4.1",
-    "nyc": "^13.0.1"
+    "nyc": "^13.0.1",
+    "imap": "^0.8.19",
+    "mailparser": "^2.3.4",
+    "imap-simple": "^4.1.0"
   }
 }
