--- a/package.json
+++ b/package.json
@@ -9,38 +9,47 @@
   "dependencies": {
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.2",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.17.2",
     "bootstrap-social": "^5.1.1",
     "check-preconditions": "^0.2.3",
-    "config": "^1.26.1",
+    "config": "^1.31.0",
     "connect-busboy": "0.0.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "debug": "^2.6.9",
+    "express": "^4.15.5",
     "express-session": "^1.15.2",
     "express-validator": "^3.2.0",
     "fs": "0.0.1-security",
     "http-status-codes": "^1.1.6",
+    "ink-docstrap": "^1.3.2",
     "jade": "^1.11.0",
+    "jsdoc-api": "^4.0.3",
+    "jsdoc-to-markdown": "^4.0.1",
     "jstransformer": "^1.0.0",
-    "mongodb": "^2.2.26",
-    "mongoose": "^4.9.8",
-    "morgan": "~1.8.1",
-    "multer": "^1.3.0",
-    "nodemailer": "^4.0.1",
+    "mongodb": "^2.2.36",
+    "mongoose": "^4.13.17",
+    "morgan": "^1.8.2",
+    "multer": "^1.3.1",
+    "nodemailer": "^4.6.8",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.1",
     "readline": "^1.3.0",
-    "serve-favicon": "~2.4.2",
+    "serve-favicon": "^2.4.5",
     "stream": "0.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "mocha": "^3.4.1",
-    "nyc": "^13.0.1",
+    "docdash": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-jsdoc3": "^2.0.0",
     "imap": "^0.8.19",
+    "imap-simple": "^4.1.0",
+    "jsdoc": "^3.5.5",
+    "jsdoc-api": "^4.0.3",
+    "jsdoc-to-markdown": "^4.0.1",
     "mailparser": "^2.3.4",
-    "imap-simple": "^4.1.0"
+    "mocha": "^3.4.1",
+    "nyc": "^13.1.0"
   }
 }
