--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signuserver",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "SET NODE_ENV=dev && node bin/www",
@@ -35,7 +35,9 @@
     "pug": "^2.0.0-rc.1",
     "readline": "^1.3.0",
     "serve-favicon": "^2.4.5",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "swagger-node-express": "^2.1.3",
+    "swagger-ui-express": "^4.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
