--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "jsdoc-api": "^4.0.3",
     "jsdoc-to-markdown": "^4.0.1",
     "jstransformer": "^1.0.0",
+    "jwt-simple": "^0.5.1",
     "mongodb": "^2.2.36",
     "mongoose": "^4.13.17",
     "morgan": "^1.8.2",
     "multer": "^1.3.1",
+    "node-oauth2-server": "^2.4.0",
     "nodemailer": "^4.6.8",
+    "oauth2-server": "^3.0.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.1",
     "readline": "^1.3.0",
