--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "dependencies": {
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.2",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "bootstrap-social": "^5.1.1",
     "check-preconditions": "^0.2.3",
     "config": "^1.31.0",
     "connect-busboy": "0.0.2",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
-    "express": "^4.15.5",
+    "express": "^4.16.3",
     "express-session": "^1.15.2",
     "express-validator": "^3.2.0",
     "fs": "0.0.1-security",
@@ -26,18 +26,17 @@
     "jsdoc-api": "^4.0.3",
     "jsdoc-to-markdown": "^4.0.1",
     "jstransformer": "^1.0.0",
-    "jwt-simple": "^0.5.1",
+    "jwt-simple": "^0.5.3",
     "mongodb": "^2.2.36",
     "mongoose": "^4.13.17",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1",
-    "node-oauth2-server": "^2.4.0",
     "nodemailer": "^4.6.8",
-    "oauth2-server": "^3.0.1",
+    "oauth2-server": "^2.4.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.1",
     "readline": "^1.3.0",
-    "serve-favicon": "^2.4.5",
+    "serve-favicon": "^2.5.0",
     "stream": "0.0.2",
     "swagger-node-express": "^2.1.3",
     "swagger-ui-express": "^4.0.1"
@@ -55,6 +54,8 @@
     "jsdoc-to-markdown": "^4.0.1",
     "mailparser": "^2.3.4",
     "mocha": "^3.4.1",
-    "nyc": "^13.1.0"
+    "nyc": "^13.1.0",
+    "simple-oauth2": "^2.2.1",
+    "assert": "^1.4.1"
   }
 }
