fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ uploads/
 uploads-test/
 routes/restrictedArea/emailConfig.js
 routes/authorisation/config.js
+sslcert/csr.csr
+sslcert/server.crt
+sslcert/server.key
+.nyc_output/
+.idea/
