--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swagger-ui-express": "^4.0.1"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "docdash": "^1.0.0",
@@ -53,9 +54,10 @@
     "jsdoc-api": "^4.0.3",
     "jsdoc-to-markdown": "^4.0.1",
     "mailparser": "^2.3.4",
-    "mocha": "^3.4.1",
+    "mocha": "^3.5.3",
     "nyc": "^13.1.0",
     "simple-oauth2": "^2.2.1",
-    "assert": "^1.4.1"
+    "superagent": "^4.0.0-beta.5",
+    "supertest": "^3.3.0"
   }
 }
