fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 node_modules/*
 uploads/
 uploads-test/
-# routes/restrictedArea/emailConfig.js
+routes/restrictedArea/emailConfig.js
 routes/authorisation/config.js
 # sslcert/csr.csr
 # sslcert/server.crt
