--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: node_js
 node_js:
 - 8.10.0
+install:
+  - npm install -g codecov
 services:
-- mongodb
+  - mongodb
 before_script: 
-before_install: 
+before_install:
+script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
 after_success: 
 env:
   global:
