--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "assert": "^1.4.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "codecov": "^3.1.0",
     "docdash": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-jsdoc3": "^2.0.0",
     "imap": "^0.8.19",
     "imap-simple": "^4.1.0",
+    "istanbul": "^0.4.5",
     "jsdoc": "^3.5.5",
     "jsdoc-api": "^4.0.3",
     "jsdoc-to-markdown": "^4.0.1",
