--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular2-jwt": "^0.2.3",
     "bcrypt": "^1.0.2",
+    "blanket": "^1.2.3",
     "body-parser": "^1.18.3",
     "bootstrap-social": "^5.1.1",
     "check-preconditions": "^0.2.3",
