--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
 services:
   - mongodb
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec
   - codecov
