--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "readline": "^1.3.0",
     "serve-favicon": "^2.5.0",
     "stream": "0.0.2",
+    "swagger-editor": "^3.6.11",
     "swagger-node-express": "^2.1.3",
     "swagger-ui-express": "^4.0.1"
   },
