--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "stream": "0.0.2",
     "swagger-editor": "^3.6.15",
     "swagger-node-express": "^2.1.3",
-    "swagger-ui-express": "^4.0.1"
+    "swagger-ui-express": "^4.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
